# sns-kongswap-adaptor

./: .gitignore  Cargo.toml  DEX.md  README.md
.github/workflows/: ci.yml
kongswap_adaptor/: Cargo.toml  kongswap-adaptor.did
kongswap_adaptor/src/: accounting.rs  add_pool.rs  agent.rs  audit.rs  balances.rs  canister.rs  deposit.rs  emit_transaction.rs  kong_api.rs  kong_types.rs  ledger_api.rs  lib.rs  logged_arithmetics.rs  requests.rs  rewards.rs  state.rs  tx_error_codes.rs  validation.rs  withdraw.rs
kongswap_adaptor/src/agent/: ic_cdk_agent.rs  icrc_requests.rs  mock_agent.rs
kongswap_adaptor/src/deposit/: deposit_add_liquidity.rs  deposit_add_pool.rs  deposit_happy_path.rs  mod.rs  test_deposit_add_liquidity.rs  test_deposit_happy_path.rs  test_failed_transfer_from.rs  tests.rs
kongswap_adaptor/src/deposit/test/: deposit_add_liquidity.rs  deposit_failed_transfer_from.rs  deposit_happy_path.rs
kongswap_adaptor/src/state/: lock_test_interleaving_should_not_pass.rs  lock_test_interleaving_should_pass.rs  lock_test_sequential_deposits.rs  lock_tests.rs  storage.rs
kongswap_adaptor/src/test_helper/: mod.rs
kongswap_adaptor/src/test_helpers/: mod.rs
kongswap_adaptor/src/withdraw/: mod.rs  tests.rs  withdraw_failed_dex_withdraw.rs  withdraw_happy_path.rs  withdraw_retry.rs
kongswap_adaptor/src/withdraw/test/: withdraw_failed_dex_withdraw.rs  withdraw_happy_path.rs  withdraw_retry.rs
kongswap_adaptor/tests/: allowance_expires.rs  allowance_expiry.rs  approval.rs  broken_dex.rs  e2e.rs  helpers.rs  kongswap_types.rs  lifecycle.rs  pocket_ic_agent.rs  withdraw.rs
kongswap_adaptor/tests/common/: helpers.rs  mod.rs  pocket_ic_agent.rs  utils.rs
scripts/: build.py  common.py  test.py
